<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_height="160dp"
    android:background="@drawable/quotes_block">

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_gravity="end"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_mad"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quotes_title"
            android:textColor="@color/bg_mad"
            android:textSize="27sp"
            style="@style/hi_text"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_quotes"
            android:textColor="@color/bg_mad"
            android:textSize="13sp"
            style="@style/other_text"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/quotes_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="подробнее"
            android:textSize="13sp"
            style="@style/btn_text"
            android:background="@drawable/qutes_block_btn"/>
    </LinearLayout>

</FrameLayout>