<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_mad"
    tools:context=".MainFragment">

    <LinearLayout
        android:id="@+id/head_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/hamburger_ico"
            android:contentDescription="@string/main_item" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo_mad"
            android:contentDescription="@string/main_item" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_ico"
            app:shapeAppearanceOverlay="@style/RoundImage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/hi_text_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/head_block"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="7dp"
                android:text="@string/hi_text"
                style="@style/hi_text"/>

            <TextView
                android:id="@+id/username_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/hi_text"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_text"
            style="@style/other_text"
            android:textColor="@color/gray_mad"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mood_list"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/hi_text_block"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/mood_item"
        android:layout_marginTop="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/info_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mood_list"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/quotes_item"
        tools:itemCount="2"/>

</androidx.constraintlayout.widget.ConstraintLayout>